[tool.poetry]
name = "traefik-certificate-exporter"
version = "0.0.1.dev1+7b4a7c3"
description = "Watches for changes to traefik acme json files and extracts certificates to a specific folder"
authors = ["Shawn Anderson <sanderson@eye-catcher.com>"]
readme = "README.md"
repository = "https://github.com/ravensorb/traefik-certificate-exporter"
homepage = "https://github.com/ravensorb/traefik-certificate-exporter"
keywords = ['traefik', 'letsencrypt']
packages = [{include = "traefik_certificate_exporter", from = "src"}]

[tool.poetry.dependencies]
python = "^3.8"
watchdog = "^2.1.9"
docker = "^6.0.0"
requests = "^2.28.1"
docker-pycreds = "^0.4.0"

[tool.poetry.scripts]
traefik-certificate-exporter = "traefik_certificate_exporter.app:main"

[build-system]
requires = ["poetry-core", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"
bump = true
stage = true

[tool.poetry-dynamic-versioning.substitution]
folders = [
  { path = "src" }
]
