[metadata]
name = traefik-certificate-exporter
author = Shawn Anderson
author_email = sanderson@eye-catcher.com
description = Watches for changes to traefik acme json files and extracts certificates to a specific folder
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ravensorb/traefik-certificate-exporter
project_urls =
    Bug Tracker = https://github.com/ravensorb/traefik-certificate-exporter/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
scripts = 
    src/traefik-certificate-exporter
install_requires = 
    watchdog
    docker
    requests
    docker-pycreds    

[options.packages.find]
where = src
